--- a/src/src/main/resources/application.properties
+++ b/src/src/main/resources/application.properties
@@ -2,3 +2,4 @@ spring.profiles.active=@environment@
 logging.path=logs/GIS.log
 spring.jpa.hibernate.ddl-auto = update
 spring.jpa.hibernate.dialect  = org.hibernate.dialect.MySQL5Dialect
+springfox.documentation.swagger.v2.path=/swagger
