--- a/src/pom.xml
+++ b/src/pom.xml
@@ -109,6 +109,11 @@
 			<artifactId>smiley-http-proxy-servlet</artifactId>
 			<version>1.10</version>
 		</dependency>
+		
+		<dependency>
+		    <groupId>org.hibernate</groupId>
+		    <artifactId>hibernate-validator</artifactId>		    
+		</dependency>
 
 	</dependencies>
 
