--- a/src/pom.xml
+++ b/src/pom.xml
@@ -21,8 +21,8 @@
 		<aspectj.version>1.8.10</aspectj.version>
 		<allure.version>1.4.11</allure.version>
 		<maven.compiler.source>1.8</maven.compiler.source>
--               <maven.compiler.target>1.8</maven.compiler.target>
--               <start-class>s4c.microservices.GIS.Application</start-class>
+		<maven.compiler.target>1.8</maven.compiler.target>
+		<start-class>s4c.microservices.GIS.Application</start-class>
 	</properties>
 
 	<dependencies>
