--- a/src/pom.xml
+++ b/src/pom.xml
@@ -19,7 +19,7 @@
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<aspectj.version>1.8.10</aspectj.version>
-		<allure.version>1.4.11</allure.version>
+		<allure.version>1.4.13</allure.version>
 		<maven.compiler.source>1.8</maven.compiler.source>
 		<maven.compiler.target>1.8</maven.compiler.target>
 		<start-class>s4c.microservices.GIS.Application</start-class>
@@ -117,6 +117,19 @@
 		    <artifactId>hibernate-validator</artifactId>		    
 		</dependency>
 
+		<dependency>
+            	    <groupId>ru.yandex.qatools.allure</groupId>
+            	    <artifactId>allure-testng-adaptor</artifactId>
+            	    <version>${allure.version}</version>
+            	   <scope>test</scope>
+            	   <exclusions>
+                	<exclusion>
+                    	    <groupId>junit</groupId>
+                    	    <artifactId>junit</artifactId>
+                	</exclusion>
+                  </exclusions>
+        	</dependency>
+
 	</dependencies>
 
 
@@ -188,14 +201,7 @@
 							<testFailureIgnore>false</testFailureIgnore>
 							<argLine>
 								-javaagent:${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar
-							</argLine>
-							<properties>
-								<property>
-									<name>listener</name>
-									<value> ru.yandex.qatools.allure.junit.AllureRunListener
-									</value>
-								</property>
-							</properties>
+							</argLine>	
 						</configuration>
 						<dependencies>
 							<dependency>
@@ -216,7 +222,7 @@
 			<plugin>
 				<groupId>ru.yandex.qatools.allure</groupId>
 				<artifactId>allure-maven-plugin</artifactId>
-				<version>2.0</version>
+				<version>2.2</version>
 			</plugin>
 		</plugins>
 	</reporting>
