--- a/src/pom.xml
+++ b/src/pom.xml
@@ -111,24 +111,30 @@
 			<artifactId>smiley-http-proxy-servlet</artifactId>
 			<version>1.10</version>
 		</dependency>
-		
+
 		<dependency>
-		    <groupId>org.hibernate</groupId>
-		    <artifactId>hibernate-validator</artifactId>		    
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-validator</artifactId>
 		</dependency>
 
 		<dependency>
-            	    <groupId>ru.yandex.qatools.allure</groupId>
-            	    <artifactId>allure-testng-adaptor</artifactId>
-            	    <version>${allure.version}</version>
-            	   <scope>test</scope>
-            	   <exclusions>
-                	<exclusion>
-                    	    <groupId>junit</groupId>
-                    	    <artifactId>junit</artifactId>
-                	</exclusion>
-                  </exclusions>
-        	</dependency>
+			<groupId>org.aspectj</groupId>
+			<artifactId>aspectjweaver</artifactId>
+			<scope>test</scope>			
+		</dependency>
+
+		<dependency>
+			<groupId>ru.yandex.qatools.allure</groupId>
+			<artifactId>allure-testng-adaptor</artifactId>
+			<version>${allure.version}</version>
+			<scope>test</scope>
+			<exclusions>
+				<exclusion>
+					<groupId>junit</groupId>
+					<artifactId>junit</artifactId>
+				</exclusion>
+			</exclusions>
+		</dependency>
 
 	</dependencies>
 
@@ -201,7 +207,7 @@
 							<testFailureIgnore>false</testFailureIgnore>
 							<argLine>
 								-javaagent:${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar
-							</argLine>	
+							</argLine>
 						</configuration>
 						<dependencies>
 							<dependency>
